[tool.poetry]
name = "nuttssh"
version = "0.3"
description = "SSH switchboard for internally patching forwarded ports"
authors = ["Matthijs Kooijman <matthijs@stdin.nl>"]
license = "MIT"
readme = "README.md"
repository = "http://github.com/matthijskooijman/nuttssh"
classifiers=[
	"Development Status :: 3 - Alpha",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python :: 3 :: Only",
	"Environment :: No Input/Output (Daemon)",
	"Framework :: AsyncIO",
	"Topic :: Internet :: Proxy Servers",
	"Topic :: System :: Networking",
]

[tool.poetry.dependencies]
python = "^3.5"
asyncssh = "^2.3"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-per-file-ignores = "*"
flake8-bugbear = "*"
flake8-comprehensions = "*"
flake8-mutable = "*"
flake8-mypy = "*"
flake8-docstrings = "*"
flake8-print = "*"
flake8-tuple = "*"
flake8-commas = "*"
flake8-isort = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
